--- a/app/templates/new_review.html
+++ b/app/templates/new_review.html
@@ -6,7 +6,7 @@
 
         <div class="col-md-8">
 
-            <img src="{{movie.poster}}" alt="{{movie.title}}" class="img-responsive">
+            <img src="{{movie.backdrop_path}}" alt="{{movie.name}}" class="img-responsive">
 
         </div>
 
